--- a/.gitignore/index.html
+++ b/.gitignore/index.html
@@ -1,9 +1,30 @@
+<!doctype html>
 <html>
-<head>
+	<head>
+		<meta charset="utf-8">
 		<title>Mona Kim UX</title>
-		<meta charset="utf-8" />
-    </head>
-    <body>
-<p>Hi! Something should be here soon but in the meantime, check out my Linkedin!</p>
+	</head>
+	<body>
+		 <header>
+			<h1 id="name">Hi!</h1>
+			<p id="about-me">Something should be here soon but in the meantime, check out my <a target="blank" href="https://www.linkedin.com/in/monakimux">Linkedin</a>!</p>
+			  </header>
+		<div class="news">
+			<!--<p>Some things that I have been up to:</p>
+				<ul>
+					<li>Trying to remember basic R programming that I learned 5+ years ago and learning it more in depth through <a target="_blank" href="http://www.coursera.org">Coursera</a></li>
+					<li>  Re-learning HTML & CSS through <a target="_blank" href="http://www.skillcrush.com">Skillcrush</a></li>
+					<li>Trying various new recipes from <a href="http://www.pinterest.com/monanaaa/nom-nom" target="_blank">Pinterest</a></li>
+			</ul> -->
+		</div>
+		<footer>
+			<h3 id="email">Contact me via <a href="mailto:monakimux@gmail.com">email</a>!</h3>
+		</footer>
+		   </body>
+</html>
+
+	</body>
+</html>
+
 </body>
 </html>
