--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<html class="no-js" lang="en">
+<head>
+	<meta charset="utf-8">
+	<title></title>
+<link href="style.css" rel="stylesheet" />
+</head>
+<body>
+<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -21,4 +29,6 @@
 			<h3 id="email">Contact me via <a href="mailto:monakimux@gmail.com">email</a>!</h3>
 		</footer>
 		   </body>
+</html>
+	</body>
 </html>
