--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		 <header>
 			<h1 id="name">Hi!</h1>
-			<p id="about-me">Something should be here soon but in the meantime, check out my <a target="blank" href="https://www.linkedin.com/in/monakimux">Linkedin</a> or shoot me an <a href="mailto:monakimux@gmail.com">email</a>!</p>
+			<p id="about-me">Something should be here soon but in the meantime, <br>check out my <a target="blank" href="https://www.linkedin.com/in/monakimux">Linkedin</a> or shoot me an <a href="mailto:monakimux@gmail.com">email</a>!</p>
 		</header>
 		<!-- <div class="news">
 			<p>Some things that I have been up to:</p>
